<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.awesome.osr_playground.MainActivity">

    <EditText
        android:id="@+id/editFirstNumber"
        android:layout_width="100dp"
        android:layout_height="46dp"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="59dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="71dp"
        android:text="@string/add_symbol"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintLeft_toRightOf="@+id/editFirstNumber"
        app:layout_constraintRight_toLeftOf="@+id/editSecondNumber"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editSecondNumber"
        android:layout_width="100dp"
        android:layout_height="46dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintTop_toTopOf="@+id/editFirstNumber"
        android:layout_marginTop="0dp"
        android:layout_marginRight="35dp"
        android:layout_marginEnd="35dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/buttonAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:onClick="onClickAbout"
        android:text="@string/about"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/editResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="95dp"
        android:ems="10"
        android:hint="@string/result_default"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAdd" />

</android.support.constraint.ConstraintLayout>
